# aminbeigi.com

./: .gitignore  .prettierignore  404.html  500.html  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/workflows/: pipeline.yml
app/: package.json
app/public/: index.html  manifest.json
app/src/: index.css  index.tsx
app/src/App/: App.css  App.tsx  Overrides.css
app/src/HomePage/: index.tsx
app/src/NotFoundPage/: index.tsx  styled.js
app/src/shared/: styled.js
css/: style.css
data/blogs/: Book Review - Crime & Punishment.md  Book Review - Think.md  Functional Programming with TypeScript.md  Stop Worshipping Dashboards.md  The Fullstack Fantasy.md
public/: blogs.json
scripts/: .env_template  README.md  deploy_to_s3.py  generate-blogs.js  generate-blogs.ts  generate_blogs.py  helper.py  pyproject.toml
scripts/deploy_to_s3/: __init__.py  __main__.py
scripts/s3_upload/: .env.template  pyproject.toml
scripts/s3_upload/src/: config_parser.py  logger.py  main.py  types.py
scripts/tests/: test_deploy_to_s3.py
src/: 404.html  App.module.css  App.tsx  blog-utils.ts  data.ts  index.css  index.html  main.tsx  types.ts  updater.py  utils.ts  vars.css
src/assets/: pgp_public_key.txt
src/components/404/: NotFoundPage.module.css  NotFoundPage.tsx
src/components/About/: About.module.css  About.tsx
src/components/BlogIndexPage/: BlogIndexPage.tsx
src/components/BlogPostPage/: BlogPostPage.tsx
src/components/Contact/: Contact.tsx
src/css/: style.css
src/test/: setup.ts
tests/: blog-index.test.tsx  blog-post.test.tsx  homepage.test.tsx  not-found.test.tsx
(+35 files in other folders)
