[project]
name = "aminbeigi-site-scripts"
version = "0.1.0"
description = "Build and deploy utility scripts for aminbeigi.com"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Amin Beigi", email = "me@aminbeigi.com" }]
dependencies = [
    "boto3>=1.42.68",
    "python-dotenv>=1.2.2",
]

[project.scripts]
generate-blogs = "generate_blogs:main"
deploy-to-s3 = "deploy_to_s3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "deploy_to_s3.py",
    "generate_blogs.py",
    "helper.py",
]
