[project]
name = "aminbeigi-site-scripts"
version = "0.1.0"
description = "Build and deploy utility scripts for aminbeigi.com"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Amin Beigi", email = "me@aminbeigi.com" }]
dependencies = [
    "boto3>=1.42.68",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "deploy_to_s3/",
]
