[tool.poetry]
name = "automate-s3-bucket-uploads"
version = "0.1.0"
description = ""
authors = ["Amin Beigi <me@aminbeigi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.36.22"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
